# NVIDIA-stock-price

./: README.md  pyproject.toml
data/raw/: NVIDIA_Stock_Price.csv
notebooks/: exploratory_analysis.ipynb  f.ipynb
src/: config.py  main.py  returns.py  statistics.py
src/nvidia_analysis/: data_loader.py  logger.py  main.py  returns.py  volatility.py
